# ETU

./: README.md
1 семестр/Математический анализ/: колоквиум.docx
2 семестр/Алгебраические структуры/: plan2.docx  Вопросы 1.docx  Вопросы 2.docx  Вопросы 3.docx  Вопросы 4.docx  Вопросы 5-1.docx  Вопросы 5-2.docx  Доп материалы к теме 5.docx  тест1-2.docx
3 семестр/Английский язык/: дз1.docx  дз_26.11.docx  дз_29.10.docx
3 семестр/Комбинаторика и теория графов/: GT_Exam_Quest_2022.docx
3 семестр/МатМод/: nobody_will_help_you.docx
3 семестр/Математические моделирование/: Темы по МатМоду.docx
3 семестр/Организация ЭВМ и систем/: Voprosy_na_zachet_po_orgEVM.rtf
4 семестр/Английский язык/: Дз 8 апреля.docx
4 семестр/ОС/: ОС к экзамену тезисы.docx
4 семестр/Операционные системы/: Os_K_Ekzamenu.docx  ОС к экзамену.docx
4 семестр/Построение и анализ алгоритмов/: Piaa.docx
4 семестр/Сети и телекоммуникации/: защита.docx
4 семестр/СиТК/: ЛБ6_ЧерняковаВА.docx  ЛБ7_ЧерняковаВА.docx
4 семестр/ТВиМС/: ТВ (учебное пособие).DOC
4 семестр/Теория вероятностей и математическая статистика/: terver.xlsx  Твимс.docx
4 семестр/Учебная практика/: report_3team (автовосстановление).docx
5 семестр/Архитектура распределенных вычислительных систем/: Лекции.docx
5 семестр/Спецификация проектирование и архитектура программных систем/: итоги 2023.xls
5 семестр/Схемотехника/: Задания на лабы.docx
6 семестр/Межличностные коммуникации/: Manipuliatsii_14993249.docx  Tvorcheskoe_zadanie_14906758.docx  Tvorcheskoe_zadanie_14909274.docx  Беззубов1303_ТворческаяРабота.doc  МЛК.docx  МЛК_печать.docx  МЛОвМГиО Учебное пособие.docx  ЧерянковаВА1304_ТворческаяРабота.doc
6 семестр/Методы оптимизации/: План-график-24.doc
6 семестр/Социология/: Интервью.docx  (+2 more)
7 семестр/Параллельные алгоритмы/labspa-concurrency-LeraChernyakova/1304_ChernyakovaVA_lab1/src/: CMakeLists.txt  time_test.sh
7 семестр/Параллельные алгоритмы/labspa-concurrency-LeraChernyakova/1304_ChernyakovaVA_lab1/src/matrix/: matrix.cpp  matrix.h
7 семестр/Параллельные алгоритмы/labspa-concurrency-LeraChernyakova/1304_ChernyakovaVA_lab1/src/process/: main.cpp  reader.cpp  start.sh  writer.cpp
7 семестр/Параллельные алгоритмы/labspa-concurrency-LeraChernyakova/1304_ChernyakovaVA_lab1/src/socket/: server_socket.cpp  server_socket.h  socket.cpp  socket.h
7 семестр/Параллельные алгоритмы/labspa-concurrency-LeraChernyakova/1304_ChernyakovaVA_lab1/src/thread/: 3_thread.cpp  p_thread.cpp
7 семестр/Параллельные алгоритмы/labspa-concurrency-LeraChernyakova/1304_ChernyakovaVA_lab2/src/: CMakeLists.txt  list.h  mainL.cpp  mainQ.cpp  matrix.h  matrix_process.cpp  queue.h  time.sh  values.h
7 семестр/Параллельные алгоритмы/labspa-concurrency-LeraChernyakova/1304_ChernyakovaVA_lab5/src1/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  matrix.cpp
(+3970 files in other folders)
